# porta

./: .gitignore  Cargo.toml  README.md  SPEC.md  mise.toml
.github/workflows/: ci.yml  release.yml
docs/: python-prototype.md  related-work.md
packaging/homebrew/: porta-core.rb  porta.rb.in
scripts/: render-formula.sh  smoke.sh
src/: atomic.rs  cli.rs  config.rs  duration.rs  error.rs  lib.rs  listeners.rs  lock.rs  main.rs  service.rs  socket.rs  state.rs
src/registry/: mod.rs  model.rs  store.rs
tests/: cli.rs
