[package]
name = "port-authority"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
description = "Reserve and lease local TCP ports so parallel worktrees, agents, and dev servers stop colliding"
license = "MIT"
readme = "README.md"
repository = "https://github.com/happycodelucky/porta"
homepage = "https://github.com/happycodelucky/porta"
keywords = ["cli", "ports", "worktrees", "agents", "development"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "porta"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.45", default-features = false, features = ["clock", "std", "unstable-locales"] }
clap = { version = "4.6.4", features = ["derive"] }
comfy-table = { version = "7.2.2", default-features = false }
listeners = "0.6.0"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
socket2 = "0.6.5"
sys-locale = "0.3.2"
tempfile = "3.27.0"
thiserror = "2.0.19"
time = { version = "0.3.54", features = ["formatting", "parsing", "serde-well-known"] }
toml = "1.1.3"
uuid = { version = "1.24.0", features = ["serde", "v4"] }

[profile.release]
lto = "thin"
strip = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
